--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -12,8 +12,11 @@
 .form input {
   margin-left: 5px;
   font-size: 36px;
+  border-radius: 10px;
 }
 
 .form .btn {
   font-size: 36px;
+  border-radius: 10px;
+  margin-left: 10px;
 }
