--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -4,6 +4,14 @@
   /* align-items: center; */
 }
 
+.item p {
+  font-size: 1.5rem;
+}
+
 .item span {
-  font-size: 2rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.item input {
 }
