--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -5,9 +5,17 @@
 
 .item p {
   font-size: 1.5rem;
+  margin-left: 10px;
 }
 
 .item span {
   font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.item button {
+  font-size: 1.5rem;
+  border: none;
+  background-color: white;
   cursor: pointer;
 }
